# vehicle-telemetry-simulator

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp
.github/workflows/: cmake-multi-platform.yml
include/: Engine.h  Gearbox.h  Vehicle.h
src/: Engine.cpp  Gearbox.cpp  Vehicle.cpp  main.cpp  plot_telemetry.py
